Scrollbar and Copy icon color in getting started section issue fixed.

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -269,7 +269,8 @@ td {
     transition: cubic-bezier(0, 1, 0, 1);
     
     a {
-        color: $lightgreen;
+        // color: $lightgreen;
+        color: #f1f3f5;
     }
 
     & h3,p{
@@ -357,13 +358,17 @@ hr {
 }
 
 .code-box::-webkit-scrollbar{
-    width: 5px;
-    height: 5px;
-    background-color: #333;
+    width: 6px;
+    height: 6px;
+    border-radius: 3px;
+    overflow: hidden;
+    padding: 2px 0;
+    background-color: #868e96  ;
 }
 
 .code-box::-webkit-scrollbar-thumb{
-    background-color: $lightgreen;
+    background-color: #f1f3f5;
+    border-radius: 3px;
 }
 
 .getting-started-heading {
